updates to my work history and print styles

--- a/ui/resume.html
+++ b/ui/resume.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>Resumé of Eric Gelinas, Web Interface Developer.</title>
+		<title>Resumé of Eric Gelinas, Engineer</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 
@@ -18,6 +18,16 @@
 		                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
 		<link rel="stylesheet" href="/style/style_domestica_summer.css" type="text/css" media="screen" charset="utf-8">
 		
+		<style media='print'>
+			h2, footer, .typekit-badge, .link-off{display:none !important;}
+			body{
+				font-size:10pt;
+				background: none;
+				color: black;
+				font-family: Georgia, serif;
+				line-height:13pt;
+			}
+		</style>
 	</head>
 
 	<body class="domestica summer">
@@ -33,28 +43,25 @@
 					</div>
 					<h2>Standard Pixel</h2>
 				</div>
-				<h1 style="margin-right: -94px;">Resumé of Eric Gelinas, Web Interface Developer.</h1>
+				<h1 style="margin-right: -252px;">Resumé of Eric Gelinas, Engineer</h1>
 			</header>
 
 			<section>
 				<h3>Summary</h3>
-								<p>To pursue a position that will apply and enhance my web standards experience. Focus my understanding of user interaction to create engaging and innovative web interfaces.</p>
+								<p>Over 15 years of web standards focused interface development experience. An uncompromising focus on elegant user interface design and development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high performing server and client Javascript.</p>
 
 								<h3>Experience</h3>
-								<p>2009 to Present Front-End Engineer - Flickr by Yahoo! San Francisco, Ca</p>
+								<p>2009 to Present Sr. Front-End Engineer - Flickr by Yahoo! San Francisco, Ca</p>
 								<p>
 									<ul>
-										<li>Key contributor in the architecture and development of the redesigned Flickr Photo page</li>
+										<li>Implemented an engineering project managment process which was adopted by all project teams</li>
+										<li>Run daily meetings as well as monitor and advise the adjustment of velocity for multiple projects</li>
+										<li>Designed a process for concordance between Yahoo Where on Earth IDs and Foursquare Venue IDs. This is in use on all Flickr Mobile apps</li>
+										<li>Moved flickr.com/map to run on LeafletJS and created a system for displaying map layers based on time taken and geo coordinate of a photo</li>
+										<li>Developed the web geotagging interface</li>
+										<li>Key contributor in a complete redesign of the Flickr Photo page in 2010</li>
 										<li>Front-End code changes on Flickr.com which includes Javascript, HTML, CSS, and PHP.</li>
-										<li>Developed a templateing system for HTML emails. This system was immediately put into use in 60 emails</li>
-										<li>Lead front-end development for the next generation of reverse geolocation on Flickr</li>
-										<li>Developed a PHP library which enables the Yahoo! map API to host tiles specific to a photo's location, language, and year taken
-										<li>Worked directly with users to identify and resolve bugs via the official product forum and twitter</li>
-										<li>Contributed a Flickr API module to the YUI3 library which simplifies the process of using API methods through Javascript</li>
-										<li>Manage the official Flickr Github account</li>
-										<li>Received two company-wide awards for my work on the Flickr Photo Page redesign including Yahoo!'s Super Star award</li>
-										<li>Responsible for daily production deployment of my code</li>
-										<li>Contributor on Flickr's photography and development blogs</li>
+										<li>Involved in architecture decisions for front-end technologies</li>
 									</ul>
 									<ul>
 										<li><a href="http://flickr.com/">http://flickr.com/</a></li>
@@ -133,7 +140,7 @@
 								</p>
 			</section>
 			
-			<section>
+			<section class="link-off">
 				<a href="/">...off to StandardPixel.com...</a>
 			</section>
 
