fix company name

--- a/ui/resume.html
+++ b/ui/resume.html
@@ -51,7 +51,7 @@
 								<p>Over 15 years of web standards focused interface development experience. An uncompromising focus on elegant user interface design and development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high performing server and client Javascript.</p>
 
 								<h3>Experience</h3>
-								<p>2009 to Present Sr. Front-End Engineer - Flickr by Yahoo! San Francisco, Ca</p>
+								<p>2009 to Present Sr. Front-End Engineer - Flickr, San Francisco, Ca</p>
 								<p>
 									<ul>
 										<li>Implemented an engineering project managment process which was adopted by all project teams</li>
