Make more sense

--- a/ui/resume.html
+++ b/ui/resume.html
@@ -55,10 +55,9 @@
 								<p>
 									<ul>
 										<li>Implemented an engineering project managment process which was adopted by all project teams</li>
-										<li>Run daily meetings as well as monitor and advise the adjustment of velocity for multiple projects</li>
 										<li>Designed a process for concordance between Yahoo Where on Earth IDs and Foursquare Venue IDs. This is in use on all Flickr Mobile apps</li>
 										<li>Moved flickr.com/map to run on LeafletJS and created a system for displaying map layers based on time taken and geo coordinate of a photo</li>
-										<li>Developed the web geotagging interface</li>
+										<li>Developed Flickr's primary web geotagging interface</li>
 										<li>Key contributor in a complete redesign of the Flickr Photo page in 2010</li>
 										<li>Front-End code changes on Flickr.com which includes Javascript, HTML, CSS, and PHP.</li>
 										<li>Involved in architecture decisions for front-end technologies</li>
