--- a/ui/index.html
+++ b/ui/index.html
@@ -45,10 +45,6 @@
 						<a href="/resume">Resumé</a>
 						<p>What exactly I have been doing with my life for the past <?=(date('Y')-1997)?> years</p>
 					</li>
-					<!--li>
-						<a href="http://s.standardpixel.com/proto">Prototypes</a>
-						<p>Some small things I have been tinkering with</p>
-					</li-->
 					<li>
 						<a href="http://github.com/standardpixel/standarpixel.com/">Source</a>
 						<p>The source code for this site and a lot more of my tinkerings</p>
@@ -58,8 +54,8 @@
 						<p>My flickr photostream. Basically my life since 2007, along with a little more.</p>
 					</li>
 					<li>
-						<a href="http://8tracks.com/standardpixel">Playlists</a>
-						<p>Digital mixtapes which I have put together on 8tracks.com</p>
+						<a href="https://play.spotify.com/user/standardpixel">Playlists</a>
+						<p>Digital mixtapes which I have put together on Spotify</p>
 					</li>
 					<li>
 						<a href="http://last.fm/user/dropinastorm">Music</a>
@@ -70,12 +66,12 @@
 						<p>Pinboard silently collects links which I share and save directly.</p>
 					</li>
 					<li>
-						<a href="http://svpply.com/standardpixel">Wish List</a>
+						<a href="http://www.pinterest.com/standardpixel/wants/">Wish List</a>
 						<p>Lots of items which I want but in many cases will never have on Svpply.com</p>
 					</li>
 					<li>
-						<a href="http://standardpixel.yelp.com/">Places</a>
-						<p>Places (mostly in SF) and elsewhere, where I have been and some words on the ones which I feel most strongly</p>
+						<a href="https://foursquare.com/user/143129/history">Places</a>
+						<p>My Swarm checkins around town and sometimes the world</p>
 					</li>
 					<li>
 						<a href="http://www.songkick.com/users/standardpixel">Gigs</a>
