change local paths

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<p>My Tumblr blog which is mostly about music</p>
 					</li>
 					<li>
-						<a href="/resume">Resumé</a>
+						<a href="resume">Resumé</a>
 						<p>What exactly I have been doing with my life for the past <?=(date('Y')-1997)?> years</p>
 					</li>
 					<li>
