add a cname file

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					}
 				}
 
-				document.getElementById('since-1997').innerHTML = (new Date().getYear())-1997;
+				document.getElementById('since-1997').innerHTML = (new Date().getFullYear())-1997;
 
 				$(window).resize(function(e) {
 					position_dependants()
