--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 					</div>
 					<h2>Standard Pixel</h2>
 				</div>
-				<h1 style="margin-right: -252px;">Resumé of Eric Gelinas, Engineer</h1>
+				<h1 style="text-align:right;">Resumé of Eric Gelinas, Engineer</h1>
 			</header>
 
 			<section>
@@ -51,7 +51,26 @@
 								<p>Over 15 years of web standards focused interface development experience. An uncompromising focus on elegant user interface design and development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high performing server and client Javascript.</p>
 
 								<h3>Experience</h3>
-								<p>2009 to Present Sr. Front-End Engineer - Flickr, San Francisco, Ca</p>
+
+								<p>2014 to Present Sr. Front-End Engineer / UX Designer - Stamen Design, San Francisco, Ca</p>
+								<p>
+									<ul>
+										<li>Full stack Javascript / NodeJS development of production websites including <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
+										<li>UX design on client project as well as <a href="http://caliparks.org">caliparks.org</a></li>
+										<li>Data driven sketching and production development using PostGIS, D3, Leaflet, and qGIS</li>
+										<li>Direct client contact and managment of deliverables</li>
+										<li>Spoke publically and attended events on behalf of Stamen Design</li>
+										<li>Worked on projects in plain Javascript/Express, Angular, and React as well as PHP</li>
+									</ul>
+									<ul>
+										<li><a href="http://caliparks.org/">http://caliparks.org/</a></li>
+										<li><a href="http://content.stamen.com/edf-methane-maps">EDF Methane maps</a></li>
+										<li><a href="http://content.stamen.com/silent-springs-specifically-audubon-society">Audubon climate change model</a></li>
+										<li><a href="http://stamen.com/">http://stamen.com/</a></li>
+									</ul>
+								</p>
+
+								<p>2009 to 2013 Sr. Front-End Engineer - Flickr, San Francisco, Ca</p>
 								<p>
 									<ul>
 										<li>Implemented an engineering project managment process which was adopted by all project teams</li>
@@ -138,7 +157,7 @@
 									</ul>
 								</p>
 			</section>
-			
+
 			<section class="link-off">
 				<a href="/">...off to StandardPixel.com...</a>
 			</section>
