--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<p>My Tumblr blog which is mostly about music</p>
 					</li>
 					<li>
-						<a href="resume">Resumé</a>
+						<a href="resume.html">Resumé</a>
 						<p>What exactly I have been doing with my life for the past <span id="since-1997"></span> years</p>
 					</li>
 					<li>
