--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
 
 			<section>
 				<h3>Summary</h3>
-								<p>Over 15 years of web standards focused interface development experience. An uncompromising focus on elegant user interface design and development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high performing server and client Javascript.</p>
+								<p>Over 18 years of web standards focused interface development experience. An uncompromising focus on elegant user interface design and development. Comfortable innovating on and maintaining sites at scale. A proven history of writing high performing server and client Javascript.</p>
 
 								<h3>Experience</h3>
 
@@ -63,10 +63,20 @@
 										<li>Worked on projects in plain Javascript/Express, Angular, and React as well as PHP</li>
 									</ul>
 									<ul>
-										<li><a href="http://caliparks.org/">http://caliparks.org/</a></li>
+										<li><a href="http://caliparks.org/">caliparks.org</a></li>
 										<li><a href="http://content.stamen.com/edf-methane-maps">EDF Methane maps</a></li>
 										<li><a href="http://content.stamen.com/silent-springs-specifically-audubon-society">Audubon climate change model</a></li>
-										<li><a href="http://stamen.com/">http://stamen.com/</a></li>
+										<li><a href="http://stamen.com/">stamen.com</a></li>
+									</ul>
+								</p>
+
+								<p>2014 to 2015 Front-End Engineer Contractor - Pop, San Francisco, Ca</p>
+								<p>
+									<ul>
+										<li>Built a website to market a communicaton app</li>
+									</ul>
+									<ul>
+										<li><a href="http://www.sendpop.io/">www.sendpop.io</a></li>
 									</ul>
 								</p>
 
@@ -82,7 +92,7 @@
 										<li>Involved in architecture decisions for front-end technologies</li>
 									</ul>
 									<ul>
-										<li><a href="http://flickr.com/">http://flickr.com/</a></li>
+										<li><a href="http://flickr.com/">flickr.com</a></li>
 									</ul>
 								</p>
 
@@ -99,7 +109,7 @@
 										<li>Work with development teams to find practical application of Agile development principals including elements of Scrum and Kanban</li>
 									</ul>
 									<ul>
-										<li><a href="http://apt.yahoo.com/">http://apt.yahoo.com/</a></li>
+										<li><a href="http://apt.yahoo.com/">apt.yahoo.com</a></li>
 									</ul>
 								</p>
 
@@ -112,8 +122,8 @@
 										<li>Ongoing HTML, Javascript, and CSS enhancements to a web portal with a user base of over 4 million subscribers. Optimized images delivered in photoshop format from UI design group. Developed Apache Velocity templates that enable a content management tool.</li>
 									</ul>
 									<ul>
-										<li><a href="http://start.earthlink.net/">http://start.earthlink.net/</a></li>
-										<li><a href="http://earthlink.net/">http://earthlink.net/</a></li>
+										<li><a href="http://start.earthlink.net/">start.earthlink.net</a></li>
+										<li><a href="http://earthlink.net/">earthlink.net</a></li>
 									</ul>
 								</p>
 
