--- a/resume.html
+++ b/resume.html
@@ -58,8 +58,8 @@
 										<li>Full stack Javascript / NodeJS development of production websites including <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
 										<li>UX design on client project as well as <a href="http://caliparks.org">caliparks.org</a></li>
 										<li>Data driven sketching and production development using PostGIS, D3, Leaflet, and qGIS</li>
-										<li>Direct client contact and managment of deliverables</li>
-										<li>Spoke publically and attended events on behalf of Stamen Design</li>
+										<li>Direct client contact and management of deliverables</li>
+										<li>Spoke publicly and attended events on behalf of Stamen Design</li>
 										<li>Worked on projects in plain Javascript/Express, Angular, and React as well as PHP</li>
 									</ul>
 									<ul>
@@ -73,7 +73,7 @@
 								<p>2014 to 2015 Front-End Engineer Contractor - Pop, San Francisco, Ca</p>
 								<p>
 									<ul>
-										<li>Built a website to market a communicaton app</li>
+										<li>Built a website to market a communication app</li>
 									</ul>
 									<ul>
 										<li><a href="http://www.sendpop.io/">www.sendpop.io</a></li>
