--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
 										<li>Data driven sketching and production development using PostGIS, D3, Leaflet, and qGIS</li>
 										<li>Direct client contact and management of deliverables</li>
 										<li>Spoke publicly and attended events on behalf of Stamen Design</li>
-										<li>Worked on projects in plain Javascript/Express, Angular, and React as well as PHP</li>
+										<li>Worked on projects in plain Javascript/Express, Angular, React as well as PHP</li>
 									</ul>
 									<ul>
 										<li><a href="http://caliparks.org/">caliparks.org</a></li>
