change caliparks comment

--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
 								<p>2014 to Present Sr. Front-End Engineer / UX Designer - Stamen Design, San Francisco, Ca</p>
 								<p>
 									<ul>
-										<li>Full stack Javascript / NodeJS development of production websites including <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
+										<li>Full stack JavaScript develpment of <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
 										<li>UX design on client project as well as <a href="http://caliparks.org">caliparks.org</a></li>
 										<li>Data driven sketching and production development using PostGIS, D3, Leaflet, and qGIS</li>
 										<li>Direct client contact and management of deliverables</li>
