change ux comment

--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
 								<p>
 									<ul>
 										<li>Full stack JavaScript develpment of <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
-										<li>UX design on client project as well as <a href="http://caliparks.org">caliparks.org</a></li>
+										<li>UX design on client projects as well as <a href="http://caliparks.org">caliparks.org</a></li>
 										<li>Data driven sketching and production development using PostGIS, D3, Leaflet, and qGIS</li>
 										<li>Direct client contact and management of deliverables</li>
 										<li>Spoke publicly and attended events on behalf of Stamen Design</li>
