--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,24 @@
 
 								<h3>Experience</h3>
 
-								<p>2014 to Present Sr. Front-End Engineer / UX Designer - Stamen Design, San Francisco, Ca</p>
+								<p>2015 to Present Web Developer - Dropbox, San Francisco, Ca</p>
+								<p>
+									<ul>
+										<li>Primary front-end on the "Campus Cup" campaign - one of the first production React applications at Dropbox</li>
+										<li>Train peers on React</li>
+										<li>Perform 2-6 engineering interviews a week and train peers on interview procedures</li>
+										<li>Built a mechanism for serving SVGs which are internationalized at runtime and cached</li>
+										<li>Write production code in Python, Javscript ES5 and ES6, and Coffeescript</li>
+										<li>Mentor new-hires, including introductory task delegation and weekly progress checkins</li>
+										<li>Evangelize and improve tools for responsive development</li>
+									</ul>
+									<ul>
+										<li><a href="http://dropbox.com/">dropbox.com</a></li>
+										<li><a href="http://dropbox.com/campuscup">dropbox.com/campuscup</a></li>
+									</ul>
+								</p>
+
+								<p>2014 to 2015 Sr. Front-End Engineer / UX Designer - Stamen Design, San Francisco, Ca</p>
 								<p>
 									<ul>
 										<li>Full stack JavaScript develpment of <a href="http://caliparks.org">caliparks.org</a> [<a href="https://github.com/stamen/caliparks.org">Source</a>]</li>
