--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
+		<!-- Dear reader, this code was mostly written in 2011. Please judge
+		     code conventions and syntax accordingy. -->
+
 		<title>Resumé of Eric Gelinas, Engineer</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
@@ -100,7 +103,7 @@
 								<p>2009 to 2013 Sr. Front-End Engineer - Flickr, San Francisco, Ca</p>
 								<p>
 									<ul>
-										<li>Implemented an engineering project managment process which was adopted by all project teams</li>
+										<li>Implemented an engineering project managment process which was adopted by all project teams.</li>
 										<li>Designed a process for concordance between Yahoo Where on Earth IDs and Foursquare Venue IDs. This is in use on all Flickr Mobile apps</li>
 										<li>Moved flickr.com/map to run on LeafletJS and created a system for displaying map layers based on time taken and geo coordinate of a photo</li>
 										<li>Developed Flickr's primary web geotagging interface</li>
