--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@
 								<p>2015 to Present Web Developer - Dropbox, San Francisco, Ca</p>
 								<p>
 									<ul>
-										<li>Primary front-end on the "Campus Cup" campaign - one of the first production React applications at Dropbox</li>
+										<li>Primary front-end developer on the "Campus Cup" campaign - one of the first production React applications at Dropbox</li>
 										<li>Train peers on React</li>
 										<li>Perform 2-6 engineering interviews a week and train peers on interview procedures</li>
 										<li>Built a mechanism for serving SVGs which are internationalized at runtime and cached</li>
