First apple update

--- a/resume.html
+++ b/resume.html
@@ -55,14 +55,31 @@
 
 								<h3>Experience</h3>
 
-								<p>2015 to Present Web Developer - Dropbox, San Francisco, Ca</p>
+								<p>2016 to Present Sr. Software Engineer - Apple, San Francisco, Ca</p>
+								<p>
+									<ul>
+										<li>Lead development of the authorization interface for MapKit JS</li>
+										<li>Developed GeoJSON import support for MapKit JS</li>
+										<li>Lead development and coninue to maintain a <a href="https://maps.developer.apple.com/">dashboard application</a> for MapKit JS users</li>
+										<li>Authored a <a href="https://developer.apple.com/videos/play/wwdc2018/508">video presentation</a> on MapKit JS authorization for WWDC 2016</li>
+										<li>Worked on the launch of transit placecards for the web</li>
+										<li>Directly responsible for public developer documentation and bi-weekly publishing of release notes for MapKit JS</li>
+									</ul>
+									<ul>
+										<li><a href="https://maps.developer.apple.com/">maps.developer.apple.com</a></li>
+										<li><a href="https://developer.apple.com/documentation/mapkitjs">developer.apple.com/documentation/mapkitjs</a></li>
+										<li><a href="https://maps.apple.com/place?address=Irvine%2C%20CA%2C%20United%20States&auid=5590598028918477796&ll=33.6571077%2C-117.7329293&lsp=9902&q=Irvine%20Station">maps.apple.com/place</a></li>
+									</ul>
+								</p>
+
+								<p>2015 to 2016 Web Developer - Dropbox, San Francisco, Ca</p>
 								<p>
 									<ul>
 										<li>Primary front-end developer on the "Campus Cup" campaign - one of the first production React applications at Dropbox</li>
 										<li>Train peers on React</li>
 										<li>Perform 2-6 engineering interviews a week and train peers on interview procedures</li>
 										<li>Built a mechanism for serving SVGs which are internationalized at runtime and cached</li>
-										<li>Write production code in Python, Javscript ES5 and ES6, and Coffeescript</li>
+										<li>Write production code in Python, Javscript ES5, Typescript, and Coffeescript</li>
 										<li>Mentor new-hires, including introductory task delegation and weekly progress checkins</li>
 										<li>Evangelize and improve tools for responsive development</li>
 									</ul>
@@ -144,46 +161,6 @@
 									<ul>
 										<li><a href="http://start.earthlink.net/">start.earthlink.net</a></li>
 										<li><a href="http://earthlink.net/">earthlink.net</a></li>
-									</ul>
-								</p>
-
-								<p>2001 to 2004 Production Coordinator - EarthLink, Inc Pasadena, Ca</p>
-								<p>
-									<ul>
-										<li>Ongoing HTML, Javascript, and CSS enhancements to the primary marketing site of a national ISP.</li>
-										<li>Primary web designer for a web site featuring EarthLink's Eco-Challenge team.</li>
-										<li>Led an initiative to create a workflow system to manage content update requests for EarthLink's portal products and improve staff efficiency. Acted as primary developer and server support for a PHP and MySQL-based application.</li>
-									</ul>
-								</p>
-
-								<p>1998 to 2001 Technical Support - EarthLink, Inc Pasadena, Ca</p>
-								<p>
-									<ul>
-										<li>Supervisor of 11 technical support representatives. Ensured customer satisfaction through direct customer communication and employee development.</li>
-										<li>Primary interface developer of a web application suite developed to facilitate communication between 4000 call center employees and corporate communications. This application was developed using ASP and Microsoft Exchange.</li>
-									</ul>
-								</p>
-
-								<p>1997 to 1998 Web Designer - Career Explorers, Inc Chatsworth, Ca</p>
-								<p>
-									<ul>
-										<li>Designed and developed primary website of a direct mail catalog.</li>
-									</ul>
-								</p>
-
-								<h3>Training</h3>
-
-								<p>2005 Agile Web Development with Rails</p>
-								<p>
-									<ul>
-										<li>Dave Thomas and Mike Clark of Pragmatic Studio</li>
-									</ul>
-								</p>
-
-								<p>2007 Scrum Team Training</p>
-								<p>
-									<ul>
-										<li>Trail Ridge Consulting</li>
 									</ul>
 								</p>
 			</section>
