--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
 									<ul>
 										<li>Lead development of the authorization interface for MapKit JS</li>
 										<li>Developed GeoJSON import support for MapKit JS</li>
-										<li>Lead development and coninue to maintain a <a href="https://maps.developer.apple.com/">dashboard application</a> for MapKit JS users</li>
+										<li>Lead development and continue to maintain a <a href="https://maps.developer.apple.com/">dashboard application</a> for MapKit JS users</li>
 										<li>Authored a <a href="https://developer.apple.com/videos/play/wwdc2018/508">video presentation</a> on MapKit JS authorization for WWDC 2016</li>
 										<li>Worked on the launch of transit placecards for the web</li>
 										<li>Directly responsible for public developer documentation and bi-weekly publishing of release notes for MapKit JS</li>
