--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			<nav class="nav">
 				<ul>
 					<li class="nav__item">
-						<a href="http://blog.standardpixel.com/">Blog</a>
-						<p>My Tumblr blog which is mostly about music</p>
+						<a rel="me" href="https://mastodon.social/@standardpixel">Mastodon</a>
+						<p>I hope you like opinions</p>
 					</li>
 					<li class="nav__item">
 						<a href="resume.html">Resumé</a>
