--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 						<p>This is stuff you can buy me... Seriously, get on it!</p>
 					</li>
 					<li class="nav__item">
-						<a href="https://foursquare.com/user/143129/history">Places</a>
-						<p>My Swarm checkins around town and sometimes the world</p>
+						<a href="https://felt.com/map/A-geoautobiography-of-Eric-Gelinas-V9AAa1RT9CQWyIP77WQbxcuC">Places</a>
+						<p>My geoautobiography</p>
 					</li>
 					<li class="nav__item">
 						<a href="http://www.songkick.com/users/standardpixel">Gigs</a>
