--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 					</li>
 					<li class="nav__item">
 						<a href="http://flickr.com/standardpixel">Photos</a>
-						<p>My flickr photostream. Basically my life since 2007, along with a little more.</p>
+						<p>My flickr photostream. Basically my life since 2007, along with a little more</p>
 					</li>
 					<li class="nav__item">
-						<a href="https://play.spotify.com/user/standardpixel">Playlists</a>
-						<p>Digital mixtapes which I have put together on Spotify</p>
+						<a href="https://music.apple.com/us/playlist/current-rotation/pl.e3491eb67f5448ae81b49e56ba88e4cf">Playlist</a>
+						<p>A playlist of what I am listening to the most right now</p>
 					</li>
 					<li class="nav__item">
-						<a href="http://last.fm/user/dropinastorm">Music</a>
-						<p>A ridiculous amount of information on what I have been listening too thanks to last.fm</p>
+						<a href="https://music.apple.com/profile/standardpixel">Music</a>
+						<p>A deeper dive into my musical tastes and the occasional musical tastes of my children</p>
 					</li>
 					<li class="nav__item">
 						<a href="http://pinboard.in/u:standardpixel">Bookmarks</a>
-						<p>Pinboard silently collects links which I share and save directly.</p>
+						<p>Pinboard silently collects links which I share and save directly</p>
 					</li>
 					<li class="nav__item">
 						<a href="http://www.pinterest.com/standardpixel/wants/">Wish List</a>
