--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 						<p>A deeper dive into my musical tastes and the occasional musical tastes of my children</p>
 					</li>
 					<li class="nav__item">
-						<a href="http://pinboard.in/u:standardpixel">Bookmarks</a>
-						<p>Pinboard silently collects links which I share and save directly</p>
+						<a href="http://getpocket.com/@e7bdkpZbTf9a5ga5a5AdtT9A2fg5T11520xI9eGk66LdhudY06a4cr57ts4KN20Z?src=navbar">Articles</a>
+						<p>Articles i'm interested in</p>
 					</li>
 					<li class="nav__item">
 						<a href="http://www.pinterest.com/standardpixel/wants/">Wish List</a>
