--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<nav class="nav">
 				<ul>
 					<li class="nav__item">
-						<a rel="me" href="https://mastodon.social/@standardpixel">Mastodon</a>
+						<a rel="me" href="https://xoxo.zone/@standardpixel">Mastodon</a>
 						<p>I hope you like opinions</p>
 					</li>
 					<li class="nav__item">
