--- a/resume.html
+++ b/resume.html
@@ -170,7 +170,7 @@
 			</section>
 
 			<footer>
-				<p>Thank you for having a look at my career. This is as good a summary I could manage in HTML. I promise there is more to share in conversation.</p>
+				<p>Thank you for having a look at my career. This is the best summary I could manage whith HTML as a medium. I recommend a real conversation for best results.</p>
 			</footer>
 		</div>
 
